# hs-bunyan

./: README.md  TODO.txt  stack.yaml
.fossil-settings/: ignore-glob
bunyan/: README.md  package.yaml
bunyan-free/: bunyan-free.cabal  package.yaml
bunyan-free/src/System/Log/Bunyan/: Free.hs
bunyan-free/test/: BunyanFreeSpec.hs  FreeTransSpec.hs
bunyan-freer/: README.md  package.yaml
bunyan-freer-simple/: README.md  bunyan-freer-simple.cabal  package.yaml
bunyan-freer-simple/src/System/Log/Bunyan/: Freer.hs
bunyan-freer-simple/test/: BunyanFreerSpec.hs
bunyan-freer/bench/: BenchBunyan.hs  BenchFreer.hs  BenchRIO.hs  Main.hs
bunyan-freer/src/System/Log/Bunyan/: Freer.hs
bunyan-freer/test/: BunyanFreerSpec.hs
bunyan-pid/: ChangeLog.md  README.md  bunyan-pid.cabal
bunyan-rio/: README.md  package.yaml
bunyan-rio/src/System/Log/Bunyan/: Class.hs  RIO.hs
bunyan-rio/test/: BunyanRIOSpec.hs
bunyan/bench/: Main.hs
bunyan/src/System/Log/: Bunyan.hs
bunyan/src/System/Log/Bunyan/: Class.hs  Context.hs  Free.hs  FreeTrans.hs  IO.hs  LogText.hs  Types.hs
bunyan/test/: BunyanSpec.hs  FreeTransSpec.hs  LogTextSpec.hs
doc/: benchmarks.html
doc/benchmarks/: bunyan_first_benchmarks.html
picolens/: package.yaml
picolens/src/Control/Lens/: PicoLens.hs
picolens/test/: PicoLensSpec.hs
tlog/: package.yaml
tlog/src/Control/Monad/Free/: Trans.hs
tlog/src/System/Log/: Bunyan.hs
tlog/src/System/Log/Bunyan/: Class.hs  Free.hs  FreeTrans.hs  IO.hs
tlog/src/System/Log/Bunyan/Free/: Reader.hs
tlog/test/: BunyanFreeSpec.hs  BunyanSpec.hs  TransSpec.hs
tprocess/: README.md  tprocess.cabal
tprocess/src/System/Process/: Current.hsc
