name:           bunyan-pid
version:        0.1.0.0
description:    Process ID in platform independent way
homepage:       https://github.com/grmble/hs-bunyan#readme
bug-reports:    https://github.com/grmble/hs-bunyan/issues
author:         Juergen Gmeiner
maintainer:     spamless.juergen@gmail.com
copyright:      (c) 2018 Juergen Gmeiner
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/grmble/hs-bunyan

library
  hs-source-dirs:
      src
  default-extensions: BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  exposed-modules:
      System.Process.Current
  other-modules:
      Paths_bunyan_pid

  if os(windows)
    build-depends: Win32 >= 2.2 && < 2.7
    extra-libraries: kernel32
    cpp-options: -DWINDOWS
  else
    build-depends: unix >= 2.5 && < 2.8

  default-language: Haskell2010

test-suite bunyan-pid-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions: BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bunyan-pid
  other-modules:
      Paths_bunyan_pid
  default-language: Haskell2010
